# soccerdona_scraper

./: .gitignore  API_REFERENCE.md  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  SCHEMA.md  pyproject.toml  scrapy.cfg
docs/superpowers/plans/: 2026-06-25-soccerdonna-scraper-backbone.md  2026-06-25-soccerdonna-scraper-games.md
docs/superpowers/specs/: 2026-06-25-soccerdonna-scraper-design.md
samples/output/: appearances.json  clubs.json  competitions.json  confederations.json  game_lineups.json  games.json  players.json
samples/pages/appearance/: spieler_100289.html  spieler_35389.html  spieler_38461.html  spieler_42354.html  spieler_89418.html
samples/pages/club/: verein_104.html  verein_1132.html  verein_407.html  verein_56.html  verein_57.html
samples/pages/competition/: BL1.html  BL2.html  CL.html  DFB.html  ESP1.html
samples/pages/game/: spielbericht_153371.html  spielbericht_153373.html  spielbericht_153375.html  (+2 more)
scripts/: collect_game_samples.sh  collect_samples.sh
soccerdonna/: settings.py  utils.py
soccerdonna/spiders/: appearances.py  clubs.py  clubs_by_url.py  common.py  common_comp_club.py  competitions.py  confederations.py  game_lineups.py  games.py  games_by_url.py  games_urls.py  players.py  players_from_file.py
tests/: conftest.py  test_appearances_spider.py  test_bypass_spiders.py  test_clubs_spider.py  test_common_comp_club.py  test_competitions_spider.py  test_confederations_spider.py  test_game_lineups_spider.py  test_games_by_url_spider.py  test_games_spider.py  test_games_urls_spider.py  test_players_spider.py  test_utils.py
(+16 files in other folders)
