[tool.poetry]
name = "soccerdonna-scraper"
version = "0.1.1"
description = "Collects women's football data from the soccerdonna.de website"
authors = ["Gemini Sports"]
packages = [{include = "soccerdonna"}]

[tool.poetry.dependencies]
python = "^3.9"
inflection = "^0.5.1"
Protego = "^0.2.1"
python-dateutil = "^2.8.2"
scrapy = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
